--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -201,6 +201,14 @@
     <Compile Include="Migrations\201812261313479_OverrideConventionsForCustomer.Designer.cs">
       <DependentUpon>201812261313479_OverrideConventionsForCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812261358292_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201812261358292_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201812261358292_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812261402105_UpdateExistingRecordsOfMembershipType.cs" />
+    <Compile Include="Migrations\201812261402105_UpdateExistingRecordsOfMembershipType.Designer.cs">
+      <DependentUpon>201812261402105_UpdateExistingRecordsOfMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -306,6 +314,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812261313479_OverrideConventionsForCustomer.resx">
       <DependentUpon>201812261313479_OverrideConventionsForCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812261358292_AddNameToMembershipType.resx">
+      <DependentUpon>201812261358292_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812261402105_UpdateExistingRecordsOfMembershipType.resx">
+      <DependentUpon>201812261402105_UpdateExistingRecordsOfMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
