--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\201812261402105_UpdateExistingRecordsOfMembershipType.Designer.cs">
       <DependentUpon>201812261402105_UpdateExistingRecordsOfMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812261450019_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201812261450019_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201812261450019_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812261402105_UpdateExistingRecordsOfMembershipType.resx">
       <DependentUpon>201812261402105_UpdateExistingRecordsOfMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812261450019_AddBirthdateToCustomer.resx">
+      <DependentUpon>201812261450019_AddBirthdateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
