Show movie list with genre

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -213,9 +213,26 @@
     <Compile Include="Migrations\201812261450019_AddBirthdateToCustomer.Designer.cs">
       <DependentUpon>201812261450019_AddBirthdateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812261520329_AddClassMovie.cs" />
+    <Compile Include="Migrations\201812261520329_AddClassMovie.Designer.cs">
+      <DependentUpon>201812261520329_AddClassMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812281225422_AddPropertiesToMovie.cs" />
+    <Compile Include="Migrations\201812281225422_AddPropertiesToMovie.Designer.cs">
+      <DependentUpon>201812281225422_AddPropertiesToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812281241482_CreateRelationshipBetweenMovieAndGenre.cs" />
+    <Compile Include="Migrations\201812281241482_CreateRelationshipBetweenMovieAndGenre.Designer.cs">
+      <DependentUpon>201812281241482_CreateRelationshipBetweenMovieAndGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812281303199_PopulateGenre.cs" />
+    <Compile Include="Migrations\201812281303199_PopulateGenre.Designer.cs">
+      <DependentUpon>201812281303199_PopulateGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -286,6 +303,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -327,6 +345,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812261450019_AddBirthdateToCustomer.resx">
       <DependentUpon>201812261450019_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812261520329_AddClassMovie.resx">
+      <DependentUpon>201812261520329_AddClassMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812281225422_AddPropertiesToMovie.resx">
+      <DependentUpon>201812281225422_AddPropertiesToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812281241482_CreateRelationshipBetweenMovieAndGenre.resx">
+      <DependentUpon>201812281241482_CreateRelationshipBetweenMovieAndGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812281303199_PopulateGenre.resx">
+      <DependentUpon>201812281303199_PopulateGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
