--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -229,6 +229,22 @@
     <Compile Include="Migrations\201812281303199_PopulateGenre.Designer.cs">
       <DependentUpon>201812281303199_PopulateGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812301110545_ChangeIdOfGenreAsByte.cs" />
+    <Compile Include="Migrations\201812301110545_ChangeIdOfGenreAsByte.Designer.cs">
+      <DependentUpon>201812301110545_ChangeIdOfGenreAsByte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812301256295_PopulateGenre1.cs" />
+    <Compile Include="Migrations\201812301256295_PopulateGenre1.Designer.cs">
+      <DependentUpon>201812301256295_PopulateGenre1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812301258016_PopulateMovie.cs" />
+    <Compile Include="Migrations\201812301258016_PopulateMovie.Designer.cs">
+      <DependentUpon>201812301258016_PopulateMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812301308089_UpdateMovieData.cs" />
+    <Compile Include="Migrations\201812301308089_UpdateMovieData.Designer.cs">
+      <DependentUpon>201812301308089_UpdateMovieData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -240,9 +256,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -305,6 +323,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -358,6 +377,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812281303199_PopulateGenre.resx">
       <DependentUpon>201812281303199_PopulateGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812301110545_ChangeIdOfGenreAsByte.resx">
+      <DependentUpon>201812301110545_ChangeIdOfGenreAsByte.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812301256295_PopulateGenre1.resx">
+      <DependentUpon>201812301256295_PopulateGenre1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812301258016_PopulateMovie.resx">
+      <DependentUpon>201812301258016_PopulateMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812301308089_UpdateMovieData.resx">
+      <DependentUpon>201812301308089_UpdateMovieData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
