replacing fluent api with data annotations

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -245,6 +245,10 @@
     <Compile Include="Migrations\201812301308089_UpdateMovieData.Designer.cs">
       <DependentUpon>201812301308089_UpdateMovieData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812301450451_UpdateGenresData.cs" />
+    <Compile Include="Migrations\201812301450451_UpdateGenresData.Designer.cs">
+      <DependentUpon>201812301450451_UpdateGenresData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -252,6 +256,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -389,6 +394,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812301308089_UpdateMovieData.resx">
       <DependentUpon>201812301308089_UpdateMovieData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812301450451_UpdateGenresData.resx">
+      <DependentUpon>201812301450451_UpdateGenresData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
