--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -269,6 +269,10 @@
     <Compile Include="Migrations\201812301450451_UpdateGenresData.Designer.cs">
       <DependentUpon>201812301450451_UpdateGenresData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901031538436_SeedUsers.cs" />
+    <Compile Include="Migrations\201901031538436_SeedUsers.Designer.cs">
+      <DependentUpon>201901031538436_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -592,6 +596,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812301450451_UpdateGenresData.resx">
       <DependentUpon>201812301450451_UpdateGenresData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901031538436_SeedUsers.resx">
+      <DependentUpon>201901031538436_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
