log In with Facebook

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -18,7 +18,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44383</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -269,9 +269,13 @@
     <Compile Include="Migrations\201812301450451_UpdateGenresData.Designer.cs">
       <DependentUpon>201812301450451_UpdateGenresData.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201901031538436_SeedUsers.cs" />
-    <Compile Include="Migrations\201901031538436_SeedUsers.Designer.cs">
-      <DependentUpon>201901031538436_SeedUsers.cs</DependentUpon>
+    <Compile Include="Migrations\201901041353025_SeedUsers.cs" />
+    <Compile Include="Migrations\201901041353025_SeedUsers.Designer.cs">
+      <DependentUpon>201901041353025_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901041412221_AdddrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201901041412221_AdddrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201901041412221_AdddrivingLicenseToApplicationUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -282,6 +286,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -524,10 +529,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -597,8 +603,11 @@
     <EmbeddedResource Include="Migrations\201812301450451_UpdateGenresData.resx">
       <DependentUpon>201812301450451_UpdateGenresData.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201901031538436_SeedUsers.resx">
-      <DependentUpon>201901031538436_SeedUsers.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201901041353025_SeedUsers.resx">
+      <DependentUpon>201901041353025_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901041412221_AdddrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201901041412221_AdddrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -619,7 +628,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>6505</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:6505/</IISUrl>
+          <IISUrl>https://localhost:44383/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
