--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\API\CustomersController.cs" />
     <Compile Include="Controllers\API\MoviesController.cs" />
+    <Compile Include="Controllers\API\NewRentalsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -213,6 +214,7 @@
     <Compile Include="DTOs\GenreDto.cs" />
     <Compile Include="DTOs\MembershipTypeDto.cs" />
     <Compile Include="DTOs\MovieDto.cs" />
+    <Compile Include="DTOs\NewRentalDto.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -297,6 +299,18 @@
     <Compile Include="Migrations\201901101137599_AddPhoneToApplicationUser.Designer.cs">
       <DependentUpon>201901101137599_AddPhoneToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901110510270_AddTableRental.cs" />
+    <Compile Include="Migrations\201901110510270_AddTableRental.Designer.cs">
+      <DependentUpon>201901110510270_AddTableRental.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901110553060_AddAvailabilityToMovie.cs" />
+    <Compile Include="Migrations\201901110553060_AddAvailabilityToMovie.Designer.cs">
+      <DependentUpon>201901110553060_AddAvailabilityToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201901110556342_InitializeNumberAvailable.cs" />
+    <Compile Include="Migrations\201901110556342_InitializeNumberAvailable.Designer.cs">
+      <DependentUpon>201901110556342_InitializeNumberAvailable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -306,6 +320,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -640,6 +655,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901101137599_AddPhoneToApplicationUser.resx">
       <DependentUpon>201901101137599_AddPhoneToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901110510270_AddTableRental.resx">
+      <DependentUpon>201901110510270_AddTableRental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901110553060_AddAvailabilityToMovie.resx">
+      <DependentUpon>201901110553060_AddAvailabilityToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901110556342_InitializeNumberAvailable.resx">
+      <DependentUpon>201901110556342_InitializeNumberAvailable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
